// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentBlock Renderer Displays ContentBlock with Media displaying in the background 1`] = `
<div
  className="embed-responsive embed-responsive-1by1 "
>
  <div
    className="fill d-flex justify-content-center align-items-center"
  >
    <div
      className="container-fluid "
    >
      <div
        className="row align-items-center"
      >
        <div
          className="col-12 col-md-12 order-first"
        />
        <div
          className="col-12 col-md text-center"
        >
          <h2 />
          <h6 />
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentBlock Renderer Displays ContentBlock with normal layout 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="container-fluid "
    >
      <div
        className="row align-items-center"
      >
        <div
          className="col-12 col-md-12 order-first"
        />
        <div
          className="col-12 col-md text-center"
        >
          <h6 />
          <h2 />
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;
